--- a/Test_Game/Test_Game.vcxproj.filters
+++ b/Test_Game/Test_Game.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="Game.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Shader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
