--- a/Test_Game/Test_Game.vcxproj.filters
+++ b/Test_Game/Test_Game.vcxproj.filters
@@ -83,5 +83,8 @@
     <ClInclude Include="Level.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ParticleEmitter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
